<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/location"
            android:drawablePadding="10dp"
            android:hint="@string/address"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextTitle"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/price"
            android:drawablePadding="10dp"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/surface"
            android:drawablePadding="10dp"
            android:hint="@string/surface"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPrice"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/description"
            android:drawablePadding="10dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextSurface"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextAgent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/agent"
            android:drawablePadding="10dp"
            android:hint="@string/agent"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextDescription"
            android:importantForAutofill="no" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutMarketDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextAgent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextMarketDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/market_date"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchSold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/sold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutPOI" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSoldDate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchSold">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSoldDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/sold_date"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <EditText
            android:id="@+id/editTextRooms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/rooms"
            android:hint="@string/rooms"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutMarketDate"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextBedrooms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/room"
            android:drawablePadding="10dp"
            android:hint="@string/bedrooms"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextRooms"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/editTextBathrooms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/bathroom"
            android:drawablePadding="10dp"
            android:inputType="number"
            android:text="@string/bathrooms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextBedrooms"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/textViewPOI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/points_of_interest"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextBathrooms" />

        <LinearLayout
            android:id="@+id/linearLayoutPOI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewPOI">

            <CheckBox
                android:id="@+id/checkBoxSchool"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/school" />

            <CheckBox
                android:id="@+id/checkBoxShopping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shopping" />

            <CheckBox
                android:id="@+id/checkBoxPublicTransport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/transport" />

            <CheckBox
                android:id="@+id/checkBoxPool"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/swimming_pool" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonUpdateProperty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/update_property"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutSoldDate" />

        <Button
            android:id="@+id/buttonDeleteProperty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/design_default_color_error"
            android:backgroundTint="@color/red"
            android:text="@string/delete_property"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonUpdateProperty" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>