<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Surface Filter -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/surface"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/min_surface">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minSurfaceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/max_surface"
                    android:layout_marginStart="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxSurfaceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <!-- Price Filter -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price_filter"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/minPriceTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/min_price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minPriceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maxPriceTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/max_price">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxPriceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <!-- Room Filter -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_filter"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/minRoomsTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/min_rooms">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/minRoomsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/maxRoomsTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:hint="@string/max_rooms">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/maxRoomsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/poiTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/points_of_interest"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bathroomsInput" />

            <LinearLayout
                android:id="@+id/poiLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:padding="@dimen/small_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/poiTitle">

                <CheckBox
                    android:id="@+id/schoolCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/school"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/shoppingCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shopping"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/transportCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transport"
                    android:textSize="12sp" />

                <CheckBox
                    android:id="@+id/poolCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swimming_pool"
                    android:textSize="12sp" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_range_filter"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <!-- Start Date Button -->
                <Button
                    android:id="@+id/btnStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/start_date"
                    tools:ignore="ButtonStyle" />

                <!-- End Date Button -->
                <Button
                    android:id="@+id/btnEndDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:text="@string/end_date"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>


            <!-- Search Button -->
            <Button
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:layout_marginTop="16dp"/>

            <!-- Search Results RecyclerView -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_results"
                android:layout_marginTop="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/searchResultsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"/>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>